# micaEur

./: .env.example  .env.test.example  .env.vault  .eslintignore  .eslintrc.js  .gitignore  .mocharc.js  .prettierignore  ANCHOR_GUIDE.md  Anchor.toml  Cargo.toml  Dockerfile  README.md  SECURITY.md  cleanup-duplicate-tests.sh  cleanup-summary.md  cleanup-tests.sh  cleanup-unused.sh  finish-migration.sh  jest.config.js  lib.rs  package-lock.json  package.json  run-js-test.js  run-simple-test.js  run-test.js  rust-toolchain.toml  rustfmt.toml  tsconfig.check.json  tsconfig.eslint.json  tsconfig.json  update-imports.sh
.cargo/: config.toml
.husky/: README.md  pre-commit
docs/: README.md  WHITEPAPER.md  anchor-build-fix.md  build-notes.md  kyc-aml-system.md  kyc-flow-guide.md  mica-eur-aml-features.md  testing-guide.md
kyc-api/: package-lock.json  package.json  solana-integration.ts  tsconfig.json  webhook-verification.ts
programs/mica_eur/: Cargo.toml  Cargo.toml.bak  Cargo.toml.orig
programs/mica_eur/.cargo/: config.toml
programs/mica_eur/litesvm_tests/src/: lib.rs
programs/mica_eur/src/: constants.rs  error.rs  kyc_oracle.rs  lib.rs  lib.rs.bak  lib.rs.orig  merkle_info.rs  mint_utils.rs  versions.rs
programs/mica_eur_new/: Cargo.toml
programs/mica_eur_new/src/: constants.rs  lib.rs
scripts/: README.md  build-clean.zsh  build-no-proxy.sh  build.sh  check-lock-version.js  check-versions.js  create-test.js  deploy.sh  extract-idl.js  force-commit.sh  generate-idl.sh  generate-test-keypairs.sh  generate-test-keys.js  initialize-dotenv.js  no-bpf-build.sh  run-all-tests.sh  run-aml-tests.sh  run-clean-project.sh  run-fixed-tests.sh  run-freeze-seize-tests.sh  run-functional-tests.sh  run-jest-tests.sh  run-kyc-end-to-end-test.sh  run-kyc-tests.sh  run-precommit-tests.sh  run-smoke-test.js  run-smoke-test.sh  run-smoke-tests.js  run-tests.sh  run-token-tests.sh  run-ts-tests.js  set-env-vars.sh  setup-env.js  setup-test-env.sh  setup.sh  test.sh  (+7 more)
(+111 files in other folders)
