[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Specify specific dependency versions for the workspace
[workspace.dependencies]
solana-program-test = "=1.18.17"
solana-sdk = "=1.18.17"
