[package]
name = "mica_eur_new"
version = "0.1.0"
description = "MiCA-compliant Euro stablecoin on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mica_eur_new"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
test-sbf = []

[dependencies]
anchor-lang = "=0.30.1"
anchor-spl = "=0.30.1" 